# ProcessScheduler

./: CMakeLists.txt  main.cpp
base/: Process.cpp  Process.h  Scheduler.cpp  Scheduler.h
memory/: BaseMemory.cpp  BaseMemory.h  BestMemory.cpp  BestMemory.h  FirstMemory.cpp  FirstMemory.h  WorstMemory.cpp  WorstMemory.h
ui/components/: MemoryBar.cpp  MemoryBar.h  NumberInput.cpp  NumberInput.h  Scrollable.cpp  Scrollable.h
ui/elements/: memoryBar.cpp  memoryBar.h  processQueue.cpp  processQueue.h
ui/tabs/: Home.cpp  Home.h  Simulator.cpp  Simulator.h
util/: Timer.cpp  Timer.h  color.cpp  color.h  random.cpp  random.h
